config-root/namespaces/jx-production/demo-react/demo-react-demo-react-deploy.yaml
# Source: demo-react/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-react-demo-react
  labels:
    draft: draft-app
    chart: "demo-react-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'demo-react'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: demo-react-demo-react
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: demo-react-demo-react
    spec:
      serviceAccountName: demo-react-demo-react
      containers:
        - name: demo-react
          image: "ghcr.io/simonjamesrowe/demo-react:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
