config-root/namespaces/jx-production/demo-react/demo-react-svc.yaml
# Source: demo-react/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-react
  labels:
    chart: "demo-react-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'demo-react'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: demo-react-demo-react
